# RTIKIDQualisys

./: CMakeLists.txt  FindXERCES.cmake  FindXSD.cmake  LICENSE  README.md  README.txt
FileIO/: CMakeLists.txt  DataFromFile.cpp  DataFromFile.h  HeaderFile.cpp  HeaderFile.h
QualisysTest/: CMakeLists.txt
gui/: CMakeLists.txt  SyncToolsEMG.cpp  SyncToolsEMG.h  SyncToolsIK.cpp  SyncToolsIK.h  mainwindow.cpp  mainwindow.h  mainwindow2Model.cpp  mainwindow2Model.h  mainwindowEMG.cpp  mainwindowEMG.h  myGLWidget.cpp  myGLWidget.h
gui/opengl/: DrawingUtility.h  Mesh.cpp  Mesh.h  RenderedMesh.cpp  RenderedMesh.h
include/: CommonCEINMS.h  Filter.h  IKAndIDComputation.h  IKSolverRT.h  InvDyn.h  InvDynThread.h  InvKin.h  InvKinImu.h  InvKinInvDynRealTime.h  InvKinMarker.h  KalmanFilterSimTK.h  Laboratory.hxx  MotionCapturePreprocessing.h  OpenSimFileLogger.h  OsimIKPlugin.h  OsimIKPluginSaveFile.h  OsimIKPluginSaveFileMultiThread.h  QualisysClient.h  RTIKIDInterface.h  SemaphoreRT.h  XMLInterpreter.h  XMLInterpreterV2.h  executionIK_ID_V2.hxx  getTime.h
include/QualisysSocket/: RTPacket.h  RTProtocol.h  StdString.h
src/: CLIOption.cpp  CLIOption.h  CMakeLists.txt  CMakeLists.txt~  Filter.cpp  IKAndIDComputation.cpp  IKAndIDComputationV2.cpp  IKSolverRT.cpp  InvDyn.cpp  InvDynThread.cpp  InvKin.cpp  InvKinImu.cpp  InvKinMarker.cpp  KalmanFilterSimTK.cpp  Laboratory.cxx  MotionCapturePreprocessing.cpp  OpenSimFileLogger.cpp  QualisysClient.cpp  RTIKIDInterface.cpp  SemaphoreRT.cpp  XMLInterpreter.cpp  XMLInterpreterV2.cpp  executionIK_ID_V2.cxx
src/QualisysSocket/: Network.cpp  QualisysData.cpp  RTPacket.cpp  RTProtocol.cpp
src/executable/: MarkerEmg.cpp  MarkerEmgRaw.cpp  TestDoubleModel.cpp  TestIMU.cpp  TestMarkerEMGRTCaptureOfflineProcc.cpp  TestMarkerRTCaptureOfflineProcc.cpp  TestMarkerThreadV2.cpp  Thrash.cpp
src/plugin/: OsimIKPlugin.cpp  OsimIKPluginSaveFile.cpp  OsimIKPluginSaveFileMultiThread.cpp
